syntax = "proto3";
import "BasicTypes.proto";
import "DtoTypes.proto";

option csharp_namespace = "ToolService";

package ToolService;

service ToolService {
	rpc LoadTools(LoadToolsRequest) returns (ListOfTools);
	rpc GetToolById(Long) returns(Tool);
	rpc InsertToolsWithHistory(InsertToolsWithHistoryRequest) returns (ListOfTools);
	rpc UpdateToolsWithHistory(UpdateToolsWithHistoryRequest) returns (ListOfTools);
	rpc GetLocationToolAssignmentLinkForTool(Long) returns (ListOfLocationToolAssignmentReferenceLink);
	rpc IsSerialNumberUnique(String) returns (Bool);
	rpc IsInventoryNumberUnique(String) returns (Bool);
	rpc GetToolComment (Long) returns (String);
	rpc LoadPictureForTool(LoadPictureForToolRequest) returns (LoadPictureForToolResponse);
	rpc LoadToolsForModel(Long) returns (ListOfTools);
	rpc LoadModelsWithAtLeasOneTool(NoParams) returns (ListOfToolModel);
	rpc LoadDeletedModelsWithAtLeasOneTool(NoParams) returns (ListOfToolModel);
}

message LoadToolsRequest {
	int32 index = 1;
	int32 size = 2;
} 

message InsertToolsWithHistoryRequest {
	ListOfToolDiffs toolDiffs = 1;
	bool returnList = 2;
}

message UpdateToolsWithHistoryRequest {
	ListOfToolDiffs toolDiffs = 1;
}

message LoadPictureForToolRequest {
	int64 toolId = 1;
	int32 fileType = 2;
}

message LoadPictureForToolResponse {
	Picture picture = 1;
}

